<resources>
    <string name="app_name">Beacon Manager</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->

    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>
    <string name="enter_your_id">Enter your id</string>
    <string name="nurse">Nurse</string>
    <string name="porter">Porter</string>
    <string name="error_empty_nurse_id">Enter the Nurse id</string>
    <string name="enter_patient_id">Enter patient id</string>
    <string name="enter_desc">Enter description</string>
    <string name="book_porter">Book Porter</string>
</resources>
